@@ -138,12 +138,13 @@
   (handler-bind ((warning #'handle-compiler-warning))
     (funcall function)))
 
-(defimplementation swank-compile-file (*compile-filename* load-p
-                                       external-format)
+(defimplementation swank-compile-file (input-file output-file
+                                       load-p external-format)
   (declare (ignore external-format))
   (with-compilation-hooks ()
-    (let ((*buffer-name* nil))
-      (compile-file *compile-filename* :load t))))
+    (let ((*buffer-name* nil)
+          (*compile-filename* input-file))
+      (compile-file input-file :output-file output-file :load t))))
 
 (defimplementation swank-compile-string (string &key buffer position filename
                                          policy)
