@@ -4,7 +4,17 @@
 
 2009-01-10  Helmut Eller  <heller@common-lisp.net>
 
+	* swank-backend.lisp (swank-compile-file): Take output-file as
+	additional argument.  Update backends accordingly.
+
+	* swank.lisp (*fasl-directory*): New variable.
+	(fasl-pathname): New function.
+	(compile-file-for-emacs): Use it.
+
+2009-01-10  Helmut Eller  <heller@common-lisp.net>
+
 	* swank-backend.lisp (set-default-initial-binding): New function.
+
 	* swank.lisp (setup-stream-indirection):  Use it
 
 2009-01-09  Helmut Eller  <heller@common-lisp.net>
